--- a/Prevu.Drawings/Machines/Blowers/VT_CMM_BlowerAirCompressor.xaml
+++ b/Prevu.Drawings/Machines/Blowers/VT_CMM_BlowerAirCompressor.xaml
@@ -6,30 +6,30 @@
              xmlns:local="clr-namespace:Prevu.Drawings.Machines.Blowers"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <Viewbox Stretch="Uniform">
-        <Canvas Name="svg36" Width="100" Height="100">
-            <Canvas.RenderTransform>
-                <TranslateTransform X="0" Y="0"/>
-            </Canvas.RenderTransform>
-            <Canvas.Resources>
-                <RectangleGeometry x:Key="clip0_1217_74" Rect="0, 0, 100, 100"/>
-            </Canvas.Resources>
-            <!--Unknown tag: sodipodi:namedview-->
-            <Canvas Name="g12" Clip="{StaticResource clip0_1217_74}">
-                <Ellipse Canvas.Left="3" Canvas.Top="3" Width="94" Height="94" Name="circle2" Fill="#FF808080"/>
-                <Path Name="path6" Fill="#FF292929">
-                    <Path.Data>
-                        <PathGeometry Figures="M31.3074 6.87213C29.6281 7.60245 27.9737 8.43849 26.3523 9.38245C25.9238 9.63192 25.5008 9.88712 25.0831 10.1479L90.5288 49.1409C91.1797 49.5287 91.1797 50.4713 90.5288 50.8591L25.0745 89.8573C27.0745 91.1057 29.1594 92.1974 31.309 93.1269L93.5999 56.0136C95.7466 54.7345 96.8819 52.5934 97.0056 50.4025C97.0081 50.1396 97.0084 49.8765 97.0065 49.6133C96.8873 47.4169 95.7518 45.2686 93.5999 43.9865L31.3074 6.87213Z" FillRule="EvenOdd"/>
-                    </Path.Data>
-                </Path>
-                <Canvas Name="g10" Effect="{StaticResource MaterialDesignElevationShadow1}">
-                    <Path Name="path8" Fill="#FF292929">
-                        <Path.Data>
-                            <PathGeometry Figures="M46.8975 31.9224C49.7546 36.8711 50.8565 44.2797 50.6178 49.3663C46.0934 47.0297 40.2283 42.3711 37.3712 37.4224C34.514 32.4737 32.9751 24.0865 33.2138 19C37.7382 21.3365 44.0403 26.9737 46.8975 31.9224ZM68.6508 43.9771C74.3651 43.9771 81.3321 46.7271 85.6178 49.4771C81.3321 52.227 74.3651 54.9771 68.6508 54.9771C62.9365 54.9771 54.9035 52.1163 50.6178 49.3663C54.9035 46.6162 62.9365 43.9771 68.6508 43.9771ZM50.6178 49.3663C50.8565 54.4528 49.7546 61.8614 46.8975 66.8102C44.0403 71.7589 37.5463 77.2852 33.0219 79.6218C32.7832 74.5352 34.514 66.2589 37.3712 61.3102C40.2283 56.3614 46.0934 51.7028 50.6178 49.3663Z" FillRule="EvenOdd"/>
-                        </Path.Data>
-                    </Path>
-                </Canvas>
-            </Canvas>
+  <Viewbox Stretch="Uniform">
+    <Canvas Name="svg36" Width="100" Height="100"  Effect="{StaticResource MaterialDesignElevationShadow1}">
+      <Canvas.RenderTransform>
+        <TranslateTransform X="0" Y="0"/>
+      </Canvas.RenderTransform>
+      <Canvas.Resources>
+        <RectangleGeometry x:Key="clip0_1217_74" Rect="0, 0, 100, 100"/>
+      </Canvas.Resources>
+      <!--Unknown tag: sodipodi:namedview-->
+      <Canvas Name="g12" Clip="{StaticResource clip0_1217_74}">
+        <Ellipse Canvas.Left="3" Canvas.Top="3" Width="94" Height="94" Name="circle2" Fill="#FF808080"/>
+        <Path Name="path6" Fill="#FF292929">
+          <Path.Data>
+            <PathGeometry Figures="M31.3074 6.87213C29.6281 7.60245 27.9737 8.43849 26.3523 9.38245C25.9238 9.63192 25.5008 9.88712 25.0831 10.1479L90.5288 49.1409C91.1797 49.5287 91.1797 50.4713 90.5288 50.8591L25.0745 89.8573C27.0745 91.1057 29.1594 92.1974 31.309 93.1269L93.5999 56.0136C95.7466 54.7345 96.8819 52.5934 97.0056 50.4025C97.0081 50.1396 97.0084 49.8765 97.0065 49.6133C96.8873 47.4169 95.7518 45.2686 93.5999 43.9865L31.3074 6.87213Z" FillRule="EvenOdd"/>
+          </Path.Data>
+        </Path>
+        <Canvas Name="g10" Effect="{StaticResource MaterialDesignElevationShadow1}">
+          <Path Name="path8" Fill="#FF292929">
+            <Path.Data>
+              <PathGeometry Figures="M46.8975 31.9224C49.7546 36.8711 50.8565 44.2797 50.6178 49.3663C46.0934 47.0297 40.2283 42.3711 37.3712 37.4224C34.514 32.4737 32.9751 24.0865 33.2138 19C37.7382 21.3365 44.0403 26.9737 46.8975 31.9224ZM68.6508 43.9771C74.3651 43.9771 81.3321 46.7271 85.6178 49.4771C81.3321 52.227 74.3651 54.9771 68.6508 54.9771C62.9365 54.9771 54.9035 52.1163 50.6178 49.3663C54.9035 46.6162 62.9365 43.9771 68.6508 43.9771ZM50.6178 49.3663C50.8565 54.4528 49.7546 61.8614 46.8975 66.8102C44.0403 71.7589 37.5463 77.2852 33.0219 79.6218C32.7832 74.5352 34.514 66.2589 37.3712 61.3102C40.2283 56.3614 46.0934 51.7028 50.6178 49.3663Z" FillRule="EvenOdd"/>
+            </Path.Data>
+          </Path>
         </Canvas>
-    </Viewbox>
+      </Canvas>
+    </Canvas>
+  </Viewbox>
 </UserControl>
