V2150: Update and fix synoptics

--- a/Prevu.Synoptics.V2150_Planeta/Pages/P230.xaml
+++ b/Prevu.Synoptics.V2150_Planeta/Pages/P230.xaml
@@ -288,8 +288,8 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <TextBlock Width="94" VerticalAlignment="Center" Canvas.Top="307" TextWrapping="Wrap" TextAlignment="Center" Canvas.Left="873" Height="50" HorizontalAlignment="Left" FontSize="36" FontWeight="Bold" Foreground="Black"><Run Text="Q"/><Run Language="it-it" Text="42"/><LineBreak/><Run/></TextBlock>
-        <Misc:DashedLine RenderTransformOrigin="0.5,0.5" Height="4" Width="514" Canvas.Left="857" Canvas.Top="295" HorizontalAlignment="Left" VerticalAlignment="Center">
+    <TextBlock Width="94" VerticalAlignment="Center" Canvas.Top="307" TextWrapping="Wrap" TextAlignment="Center" Canvas.Left="873" Height="50" HorizontalAlignment="Left" FontSize="36" FontWeight="Bold" Foreground="Black"><Run Language="it-it" Text="S420"/><LineBreak/><Run/></TextBlock>
+    <Misc:DashedLine RenderTransformOrigin="0.5,0.5" Height="4" Width="514" Canvas.Left="857" Canvas.Top="295" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Misc:DashedLine.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -319,9 +319,9 @@
                 </TransformGroup>
             </Misc:DashedLine.RenderTransform>
         </Misc:DashedLine>
-        <TextBlock Width="94" Canvas.Top="325" TextWrapping="Wrap" TextAlignment="Center" Canvas.Left="697" Height="50" FontSize="36" FontWeight="Bold" Foreground="Black" HorizontalAlignment="Left" VerticalAlignment="Center"><Run Text="Q"/><Run Language="it-it" Text="40"/><LineBreak/><Run Language="it-it"/></TextBlock>
-        <TextBlock Width="94" Canvas.Top="308" TextWrapping="Wrap" TextAlignment="Center" Canvas.Left="534" Height="50" FontSize="36" FontWeight="Bold" Foreground="Black" HorizontalAlignment="Left" VerticalAlignment="Center"><Run Text="Q"/><Run Language="it-it" Text="41"/><LineBreak/><Run/></TextBlock>
-        <Misc:DashedLine RenderTransformOrigin="0.5,0.5" Height="4" Width="454" Canvas.Left="184" Canvas.Top="295" HorizontalAlignment="Left" VerticalAlignment="Center">
+    <TextBlock Width="94" Canvas.Top="325" TextWrapping="Wrap" TextAlignment="Center" Canvas.Left="697" Height="50" FontSize="36" FontWeight="Bold" Foreground="Black" HorizontalAlignment="Left" VerticalAlignment="Center"><Run Language="it-it" Text="S400"/><LineBreak/><Run/></TextBlock>
+    <TextBlock Width="94" Canvas.Top="308" TextWrapping="Wrap" TextAlignment="Center" Canvas.Left="534" Height="50" FontSize="36" FontWeight="Bold" Foreground="Black" HorizontalAlignment="Left" VerticalAlignment="Center"><Run Language="it-it" Text="S410"/></TextBlock>
+    <Misc:DashedLine RenderTransformOrigin="0.5,0.5" Height="4" Width="454" Canvas.Left="184" Canvas.Top="295" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Misc:DashedLine.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
