--- a/Prevu.Synoptics.V2150_Planeta/Pages/P350.xaml
+++ b/Prevu.Synoptics.V2150_Planeta/Pages/P350.xaml
@@ -10,7 +10,7 @@
              x:Class="Prevu.Synoptics.P350" mc:Ignorable="d" 
              Height="850" Width="1550" d:Background="{DynamicResource MaterialDesignPaper}">
   <Canvas>
-    <Labels:Pipe Width="75" StatusComponent="376-01-MA1" PipeHeight="Medium" Canvas.Left="915" Canvas.Top="277" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Top">
+    <Labels:Pipe Width="75" StatusComponent="350-01-MA1" PipeHeight="Medium" Canvas.Left="915" Canvas.Top="277" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Top">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -447,9 +447,9 @@
     <Machines:V01_WCE_Centrifuge Canvas.Left="432" Canvas.Top="66" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Machines:V01_SCW_Screw_wHopper Canvas.Left="894" Canvas.Top="214" Height="188" Width="214" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:DeviceLabel HorizontalAlignment="Left" 
-            VerticalAlignment="Top" 
-            ComponentName="376-61-LEV" Loaded="DeviceLabel_Loaded" Canvas.Left="796" Canvas.Top="272"/>
-    <Labels:DetailsLabel HorizontalAlignment="Left" VerticalAlignment="Top" ComponentName="376-VIEW" DetailsPageName="D376" HideComponentName="True" Canvas.Left="896" Canvas.Top="272"/>
+            VerticalAlignment="Center" 
+            ComponentName="376-61-LEV" Loaded="DeviceLabel_Loaded" Canvas.Left="775" Canvas.Top="272"/>
+    <Labels:DetailsLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="376-VIEW" DetailsPageName="D376" HideComponentName="True" Canvas.Left="875" Canvas.Top="272"/>
     <Machines:V01_VB_VibratingScreen Canvas.Left="950" Canvas.Top="483" Height="100" Width="100" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:DeviceLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
