--- a/Prevu.Synoptics.V2150_Planeta/Pages/P510.xaml
+++ b/Prevu.Synoptics.V2150_Planeta/Pages/P510.xaml
@@ -20,7 +20,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe Width="130" StatusComponent="527-61-LEV" PipeHeight="Medium" Canvas.Left="786" Canvas.Top="429" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center">
+    <Labels:Pipe Width="90" StatusComponent="514-01-MA1" PipeHeight="Medium" Canvas.Left="806" Canvas.Top="449" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -30,7 +30,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe Width="142" StatusComponent="527-61-LEV" PipeHeight="Medium" Canvas.Left="747" Canvas.Top="426" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center">
+    <Labels:Pipe Width="92" StatusComponent="514-01-MA1" PipeHeight="Medium" Canvas.Left="772" Canvas.Top="451" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -391,11 +391,11 @@
     <Machines:V01_VRC_WaterTank Canvas.Left="1263" Canvas.Top="141" HorizontalAlignment="Center" VerticalAlignment="Top" Width="145" Height="136" ComponentName="518-41-LT1" TrendName="LEVEL"/>
     <Machines:V01_WCE_Centrifuge Canvas.Left="282" Canvas.Top="112" Height="186" Width="215" HorizontalAlignment="Left" VerticalAlignment="Top"/>
     <Machines:V01_Hopper Canvas.Left="750" Canvas.Top="281" Height="148" Width="169" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-    <TextBlock Width="94" VerticalAlignment="Center" Canvas.Top="362" TextWrapping="Wrap" TextAlignment="Center" Canvas.Left="1079" Height="50" HorizontalAlignment="Left" FontSize="36" FontWeight="Bold" Foreground="Black"><Run Text="Q7"/><Run Language="it-it" Text="1"/><LineBreak/><Run Language="it-it"/></TextBlock>
+    <TextBlock Width="94" VerticalAlignment="Top" Canvas.Top="230" TextWrapping="Wrap" TextAlignment="Center" Canvas.Left="790" Height="50" HorizontalAlignment="Left" FontSize="36" FontWeight="Bold" Foreground="Black"><Run Language="it-it" Text="S710"/></TextBlock>
     <TextBlock TextWrapping="Wrap" 
             Height="50" Width="94" TextAlignment="Center" 
-            FontSize="36" Foreground="Black" FontWeight="Bold" HorizontalAlignment="Left" Canvas.Left="1126" Canvas.Top="408" VerticalAlignment="Center"><Run Text="Q"/><Run Language="it-it" Text="7"/><Run Text="2"/><LineBreak/><Run/></TextBlock>
-    <Misc:DashedLine RenderTransformOrigin="0.5,0.5" Height="4" Width="424" Canvas.Left="833" Canvas.Top="408" HorizontalAlignment="Left" VerticalAlignment="Center">
+            FontSize="36" Foreground="Black" FontWeight="Bold" HorizontalAlignment="Left" Canvas.Left="1114" Canvas.Top="414" VerticalAlignment="Center"><Run Language="it-it" Text="S720"/></TextBlock>
+    <Misc:DashedLine RenderTransformOrigin="0.5,0.5" Height="4" Width="705" Canvas.Left="833" Canvas.Top="414" HorizontalAlignment="Left" VerticalAlignment="Center">
       <Misc:DashedLine.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -405,7 +405,7 @@
         </TransformGroup>
       </Misc:DashedLine.RenderTransform>
     </Misc:DashedLine>
-    <Misc:DashedLine RenderTransformOrigin="0.5,0.5" Height="4" Width="400" Canvas.Left="634" Canvas.Top="607" HorizontalAlignment="Left" VerticalAlignment="Center">
+    <Misc:DashedLine RenderTransformOrigin="0.5,0.5" Height="4" Width="400" Canvas.Left="634" Canvas.Top="613" HorizontalAlignment="Center" VerticalAlignment="Top">
       <Misc:DashedLine.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -478,9 +478,9 @@
     <Labels:DeviceLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
             ComponentName="510-01-MA1" Canvas.Left="507" Canvas.Top="147"/>
-    <Labels:DeviceLabel HorizontalAlignment="Left" 
-            VerticalAlignment="Center" 
-            ComponentName="514-01-MA1" Canvas.Left="544" Canvas.Top="360"/>
+    <Labels:DeviceLabel HorizontalAlignment="Center" 
+            VerticalAlignment="Top" 
+            ComponentName="514-01-MA1" Canvas.Left="544" Canvas.Top="357"/>
     <Labels:DeviceLabel HorizontalAlignment="Center" 
 		VerticalAlignment="Top" 
 		ComponentName="510-DCE" RenderTransformOrigin="0.567,-2.17" Canvas.Left="347" Canvas.Top="77"/>
@@ -501,7 +501,7 @@
     <Labels:DeviceLabel 
             ComponentName="518-21-CV1" RenderTransformOrigin="0.567,-2.17" Canvas.Left="1399" Canvas.Top="55" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:JumpLabel 
-            JumpFromLabel="518-01-MA1" 
+            JumpFromLabel="519-01-MA1" 
             JumpToLabel="380-23-CV1" Canvas.Left="1063" Canvas.Top="107" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:DeviceLabel 
             ComponentName="532-01-MA1" Width="96" Canvas.Left="449" Canvas.Top="531" HorizontalAlignment="Left" VerticalAlignment="Center"/>
@@ -526,5 +526,38 @@
             ComponentName="545-01-MA1" Canvas.Left="1291" Canvas.Top="723" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:DeviceLabel 
             ComponentName="510-22-CV1"  Canvas.Left="225" Canvas.Top="326" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Misc:DashedLine RenderTransformOrigin="0.5,0.5" Height="4" Width="424" Canvas.Left="412" Canvas.Top="414" HorizontalAlignment="Center" VerticalAlignment="Top">
+      <Misc:DashedLine.RenderTransform>
+        <TransformGroup>
+          <ScaleTransform/>
+          <SkewTransform/>
+          <RotateTransform Angle="0"/>
+          <TranslateTransform/>
+        </TransformGroup>
+      </Misc:DashedLine.RenderTransform>
+    </Misc:DashedLine>
+    <Misc:DashedLine RenderTransformOrigin="0.5,0.5" Height="4" Width="184" Canvas.Left="320" Canvas.Top="506" HorizontalAlignment="Center" VerticalAlignment="Top">
+      <Misc:DashedLine.RenderTransform>
+        <TransformGroup>
+          <ScaleTransform/>
+          <SkewTransform/>
+          <RotateTransform Angle="90"/>
+          <TranslateTransform/>
+        </TransformGroup>
+      </Misc:DashedLine.RenderTransform>
+    </Misc:DashedLine>
+    <Misc:DashedLine RenderTransformOrigin="0.5,0.5" Height="4" Width="351" Canvas.Left="62" Canvas.Top="595" HorizontalAlignment="Left" VerticalAlignment="Center">
+      <Misc:DashedLine.RenderTransform>
+        <TransformGroup>
+          <ScaleTransform/>
+          <SkewTransform/>
+          <RotateTransform Angle="0"/>
+          <TranslateTransform/>
+        </TransformGroup>
+      </Misc:DashedLine.RenderTransform>
+    </Misc:DashedLine>
+    <TextBlock TextWrapping="Wrap" 
+      Height="50" Width="94" TextAlignment="Center" 
+      FontSize="36" Foreground="Black" FontWeight="Bold" Canvas.Left="416" Canvas.Top="414" HorizontalAlignment="Left" VerticalAlignment="Center"><Run Text="S7"/><Run Language="it-it" Text="11"/></TextBlock>
   </Canvas>
 </UserControl>
