--- a/Prevu.Synoptics.V2150_Planeta/Pages/P608.xaml
+++ b/Prevu.Synoptics.V2150_Planeta/Pages/P608.xaml
@@ -282,7 +282,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="160" RenderTransformOrigin="0.5,0.5" StatusComponent="557-01-MA1" PipeHeight="Medium" Height="24" Canvas.Left="31" Canvas.Top="561" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Width="160" RenderTransformOrigin="0.5,0.5" StatusComponent="557-02-MA1" PipeHeight="Medium" Height="24" Canvas.Left="31" Canvas.Top="561" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -543,9 +543,9 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <TextBlock Width="94" VerticalAlignment="Center" Canvas.Top="43" TextWrapping="Wrap" TextAlignment="Center" Canvas.Left="561" Height="50" HorizontalAlignment="Left" FontSize="36" FontWeight="Bold" Foreground="Black"><Run Text="Q7"/><Run Language="it-it" Text="1"/><LineBreak/><Run Language="it-it"/></TextBlock>
-        <TextBlock Width="94" VerticalAlignment="Center" Canvas.Top="43" TextWrapping="Wrap" TextAlignment="Center" Canvas.Left="660" Height="50" HorizontalAlignment="Left" FontSize="36" FontWeight="Bold" Foreground="Black"><Run Text="Q"/><Run Language="it-it" Text="8"/><Run Text="1"/><LineBreak/><Run/></TextBlock>
-        <Misc:DashedLine RenderTransformOrigin="0.5,0.5" Height="4" Width="778" Canvas.Left="270" Canvas.Top="432" HorizontalAlignment="Left" VerticalAlignment="Center">
+    <TextBlock Width="94" VerticalAlignment="Center" Canvas.Top="43" TextWrapping="Wrap" TextAlignment="Center" Canvas.Left="561" Height="50" HorizontalAlignment="Left" FontSize="36" FontWeight="Bold" Foreground="Black"><Run Language="it-it" Text="S710"/></TextBlock>
+    <TextBlock Width="94" VerticalAlignment="Center" Canvas.Top="43" TextWrapping="Wrap" TextAlignment="Center" Canvas.Left="660" Height="50" HorizontalAlignment="Left" FontSize="36" FontWeight="Bold" Foreground="Black"><Run Language="it-it" Text="S810"/></TextBlock>
+    <Misc:DashedLine RenderTransformOrigin="0.5,0.5" Height="4" Width="778" Canvas.Left="270" Canvas.Top="432" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Misc:DashedLine.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
