V3085 -Mods on many Synopics

--- a/Prevu.Synoptics.V3085_Anviplas/P230.xaml
+++ b/Prevu.Synoptics.V3085_Anviplas/P230.xaml
@@ -611,6 +611,6 @@
             VerticalAlignment="Center" 
             ComponentName="210-21-CV1" Canvas.Left="738" Canvas.Top="104"/>
         <Labels:DeviceLabel 
-            ComponentName="210-DISCH" Canvas.Left="529" Canvas.Top="703" HorizontalAlignment="Center" VerticalAlignment="Top" />
+            ComponentName="210-DISCHARGE" Canvas.Left="529" Canvas.Top="703" HorizontalAlignment="Center" VerticalAlignment="Top" />
     </Canvas>
 </UserControl>
