--- a/Prevu.Synoptics.V3085_Anviplas/P430.xaml
+++ b/Prevu.Synoptics.V3085_Anviplas/P430.xaml
@@ -347,11 +347,11 @@
             ComponentName="420-71-ECS3" Canvas.Left="91" Canvas.Top="120"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
-            ComponentName="430-SEP-PADDLES" Canvas.Left="741" Canvas.Top="180"/>
+            ComponentName="430-PADDLES" Canvas.Left="741" Canvas.Top="180"/>
         <Labels:DetailsLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="430-PADDLES" DetailsPageName="D430" HideComponentName="True" Canvas.Left="836" Canvas.Top="180"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
-            ComponentName="430-SEP-DISTR" Canvas.Left="918" Canvas.Top="180"/>
+            ComponentName="430-DISTRIB" Canvas.Left="918" Canvas.Top="180"/>
         <Labels:DetailsLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="430-DISTRIBUTORS" DetailsPageName="D430_2" HideComponentName="True" Canvas.Left="1013" Canvas.Top="180"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
@@ -375,12 +375,12 @@
             JumpToLabel="440-01-MA1" Canvas.Left="1360" Canvas.Top="474"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
-            ComponentName="420-DISCH" Canvas.Left="481" Canvas.Top="592"/>
+            ComponentName="420-DISCHARGE" Canvas.Left="481" Canvas.Top="592"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
-            ComponentName="430-DISCH-1" Canvas.Left="864" Canvas.Top="727"/>
+            ComponentName="430-DISCHARGE-1" Canvas.Left="864" Canvas.Top="727"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
-            ComponentName="430-DISCH-2" Canvas.Left="1102" Canvas.Top="730"/>
+            ComponentName="430-DISCHARGE-2" Canvas.Left="1102" Canvas.Top="730"/>
     </Canvas>
 </UserControl>
