--- a/Prevu.Synoptics.V3085_Anviplas/P020.xaml
+++ b/Prevu.Synoptics.V3085_Anviplas/P020.xaml
@@ -131,7 +131,7 @@
         </TransformGroup>
       </Rectangle.RenderTransform>
     </Rectangle>
-    <Border BorderThickness="1" HorizontalAlignment="Center" Height="215" VerticalAlignment="Top" Width="117" Background="Gray" CornerRadius="15,15,15,15" Canvas.Left="248" Canvas.Top="426"/>
+    <Border BorderThickness="1" HorizontalAlignment="Center" Height="165" VerticalAlignment="Top" Width="117" Background="Gray" CornerRadius="15,15,15,15" Canvas.Left="248" Canvas.Top="463"/>
     <Machines:MaterialInletOutlet HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Height="100" Width="98" Canvas.Left="413" Canvas.Top="168">
       <Machines:MaterialInletOutlet.RenderTransform>
         <TransformGroup>
@@ -142,20 +142,10 @@
         </TransformGroup>
       </Machines:MaterialInletOutlet.RenderTransform>
     </Machines:MaterialInletOutlet>
-    <Machines:CV_Valve HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Height="48" Width="56" Canvas.Left="592" Canvas.Top="92">
-      <Machines:CV_Valve.RenderTransform>
-        <TransformGroup>
-          <ScaleTransform/>
-          <SkewTransform/>
-          <RotateTransform Angle="90"/>
-          <TranslateTransform/>
-        </TransformGroup>
-      </Machines:CV_Valve.RenderTransform>
-    </Machines:CV_Valve>
     <Machines:Buffer_belt HorizontalAlignment="Center" VerticalAlignment="Top" Height="108" Width="237" Canvas.Left="513" Canvas.Top="171"/>
     <Machines:PR_Prerompitore HorizontalAlignment="Center" Width="407" Height="335" Canvas.Left="810" Canvas.Top="299" VerticalAlignment="Top"/>
-    <Machines:Radar HorizontalAlignment="Center" VerticalAlignment="Top" Height="36" Width="31" Canvas.Left="1087" Canvas.Top="276"/>
-    <Machines:CV_Valve_001 HorizontalAlignment="Center" VerticalAlignment="Top" Color="Air" Height="52" Width="51" RenderTransformOrigin="0.5,0.5" Canvas.Left="1233" Canvas.Top="194">
+    <Machines:Radar HorizontalAlignment="Left" VerticalAlignment="Center" Height="36" Width="31" Canvas.Left="1089" Canvas.Top="276"/>
+    <Machines:CV_Valve_001 HorizontalAlignment="Left" VerticalAlignment="Center" Color="Air" Height="52" Width="51" RenderTransformOrigin="0.5,0.5" Canvas.Left="1230" Canvas.Top="194">
       <Machines:CV_Valve_001.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -196,7 +186,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water" Width="113" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="020-25-CV1" Canvas.Left="1108" Canvas.Top="419">
+    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="135" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="020-25-CV1" Canvas.Left="1106" Canvas.Top="419">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform ScaleX="0.859" ScaleY="1.164"/>
@@ -276,7 +266,7 @@
         </TransformGroup>
       </Machines:CV_Valve_001.RenderTransform>
     </Machines:CV_Valve_001>
-    <Machines:CV_Valve_001 HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water" RenderTransformOrigin="0.5,0.5" Height="45" Width="76" Canvas.Left="1193" Canvas.Top="405">
+    <Machines:CV_Valve_001 HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" RenderTransformOrigin="0.5,0.5" Height="45" Width="76" Canvas.Left="1206" Canvas.Top="405">
       <Machines:CV_Valve_001.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -292,23 +282,23 @@
             ComponentName="018-01-MA1" Canvas.Left="680" Canvas.Top="132"/>
     <Labels:DeviceLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
-            ComponentName="018-21-CV1" Canvas.Left="510" Canvas.Top="88"/>
+            ComponentName="018-21-CV1" Canvas.Left="510" Canvas.Top="86"/>
     <Labels:DeviceLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
             ComponentName="018-21-CV2" Height="50" Width="90" Canvas.Left="510" Canvas.Top="143"/>
+    <Labels:DeviceLabel HorizontalAlignment="Left" 
+            VerticalAlignment="Center" 
+            ComponentName="020-41-LT1" Canvas.Left="1127" Canvas.Top="250"/>
     <Labels:DeviceLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
-            ComponentName="020-41-LT1" Canvas.Left="1125" Canvas.Top="250"/>
-    <Labels:DeviceLabel HorizontalAlignment="Center" 
-            VerticalAlignment="Top" 
-            ComponentName="020-22-CV1" Canvas.Left="571" Canvas.Top="355"/>
+            ComponentName="020-22-CV1" Canvas.Left="571" Canvas.Top="353"/>
     <Labels:DeviceLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
             ComponentName="020-21-TT1" Canvas.Left="1197" Canvas.Top="473"/>
     <Labels:DeviceLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
-            ComponentName="020-26-CV1" Canvas.Left="1209" Canvas.Top="152"/>
-    <Labels:DeviceLabel HorizontalAlignment="Center" Height="50" VerticalAlignment="Top" Width="90" ComponentName="020-SHREDDER" Canvas.Left="548" Canvas.Top="631"/>
+            ComponentName="020-26-CV1" Canvas.Left="1209" Canvas.Top="149"/>
+    <Labels:DeviceLabel HorizontalAlignment="Center" Height="50" VerticalAlignment="Center" Width="90" ComponentName="020-SHREDDER" Canvas.Left="870" Canvas.Top="252"/>
     <Labels:DeviceLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
             ComponentName="020-01-YA1" Canvas.Left="870" Canvas.Top="331"/>
@@ -317,7 +307,7 @@
             ComponentName="020-03-MA1" Canvas.Left="870" Canvas.Top="391"/>
     <Labels:DeviceLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
-            ComponentName="020-22-CV2" Canvas.Left="668" Canvas.Top="355"/>
+            ComponentName="020-22-CV2" Canvas.Left="668" Canvas.Top="353"/>
     <Labels:DeviceLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
             ComponentName="020-24-CV1" Canvas.Left="619" Canvas.Top="411"/>
@@ -335,19 +325,29 @@
             ComponentName="020-21-PT1" Canvas.Left="651" Canvas.Top="568"/>
     <Labels:DeviceLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
-            ComponentName="020-25-CV1" Canvas.Left="1184" Canvas.Top="361"/>
+            ComponentName="020-25-CV1" Canvas.Left="1197" Canvas.Top="357"/>
+    <Labels:DeviceLabel HorizontalAlignment="Left" 
+            VerticalAlignment="Center" 
+            ComponentName="020-23-CV1" Canvas.Left="316" Canvas.Top="696"/>
     <Labels:DeviceLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
-            ComponentName="020-23-CV1" Canvas.Left="311" Canvas.Top="700"/>
+            ComponentName="020-11-R1" Canvas.Left="262" Canvas.Top="480"/>
     <Labels:DeviceLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
-            ComponentName="020-11-R1" Canvas.Left="262" Canvas.Top="478"/>
-    <Labels:DeviceLabel HorizontalAlignment="Center" 
-            VerticalAlignment="Top" 
-            ComponentName="020-42-TT1" Canvas.Left="262" Canvas.Top="542"/>
+            ComponentName="020-42-TT1" Canvas.Left="262" Canvas.Top="558"/>
     <Labels:JumpLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
             JumpFromLabel="024-01-MA1" 
             JumpToLabel="210-01-MA1" Canvas.Left="1194" Canvas.Top="695"/>
+    <Machines:CV_Valve_001 Color="Oil" Height="52" Width="51" RenderTransformOrigin="0.5,0.5" Canvas.Left="595" Canvas.Top="82" HorizontalAlignment="Left" VerticalAlignment="Center">
+      <Machines:CV_Valve_001.RenderTransform>
+        <TransformGroup>
+          <ScaleTransform/>
+          <SkewTransform/>
+          <RotateTransform Angle="-90.501"/>
+          <TranslateTransform/>
+        </TransformGroup>
+      </Machines:CV_Valve_001.RenderTransform>
+    </Machines:CV_Valve_001>
   </Canvas>
 </UserControl>
