--- a/Prevu.Synoptics.V3085_Anviplas/P430.xaml
+++ b/Prevu.Synoptics.V3085_Anviplas/P430.xaml
@@ -64,7 +64,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="105" Color="Water" StatusComponent="450-01-MA1" Canvas.Left="323" Canvas.Top="324"/>
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="105" Color="Water" StatusComponent="453-01-MA1" Canvas.Left="323" Canvas.Top="324"/>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="226" StatusComponent="233-01-MA1" PipeHeight="Medium" Canvas.Left="214" Canvas.Top="264"/>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="289" Color="Water" StatusComponent="432-01-MA1" VisibilityComponent="" Canvas.Left="1088" Canvas.Top="485"/>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="48" Color="Water" StatusComponent="420-71-ECS1" Canvas.Left="370" Canvas.Top="247"/>
@@ -352,7 +352,7 @@
         <Labels:DeviceLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
             ComponentName="430-DISTRIB" Canvas.Left="918" Canvas.Top="180"/>
-        <Labels:DetailsLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="430-DISTRIBUTORS" DetailsPageName="D430_2" HideComponentName="True" Canvas.Left="1013" Canvas.Top="180"/>
+        <Labels:DetailsLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="430-DISTRIB" DetailsPageName="D430_2" HideComponentName="True" Canvas.Left="1013" Canvas.Top="180"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
             ComponentName="430-21-CV1" Canvas.Left="864" Canvas.Top="592"/>
