--- a/Prevu.Synoptics.V3085_Anviplas/P464.xaml
+++ b/Prevu.Synoptics.V3085_Anviplas/P464.xaml
@@ -176,7 +176,7 @@
             ComponentName="464-23-CV1" Canvas.Left="959" Canvas.Top="470"/>
     <Labels:DeviceLabel HorizontalAlignment="Center" 
 		VerticalAlignment="Top" 
-		ComponentName="464-F-PRESS" Canvas.Left="518" Canvas.Top="250"/>
+		ComponentName="464-F-PRESS" Canvas.Left="518" Canvas.Top="247"/>
     <Labels:DeviceLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
             ComponentName="464-01-MA1" Canvas.Left="518" Canvas.Top="329"/>
@@ -195,14 +195,14 @@
     <Labels:DeviceLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
             ComponentName="464-21-CV1" Canvas.Left="959" Canvas.Top="329"/>
-    <Labels:DeviceLabel HorizontalAlignment="Center" 
-            VerticalAlignment="Top" 
-            ComponentName="464-41-PT1" Canvas.Left="901" Canvas.Top="202"/>
+    <Labels:DeviceLabel HorizontalAlignment="Left" 
+            VerticalAlignment="Center" 
+            ComponentName="464-41-PT1" Canvas.Left="900" Canvas.Top="202"/>
     <Labels:DeviceLabel 
-            ComponentName="464-61-LEV" Canvas.Left="714" Canvas.Top="248" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+            ComponentName="464-61-LEV" Canvas.Left="715" Canvas.Top="247" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:JumpLabel 
             JumpFromLabel="482-21-CV1" 
             JumpToLabel="482-21-CV1" Canvas.Left="1186" Canvas.Top="568" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-    <Labels:DetailsLabel ComponentName="460-VIEW" DetailsPageName="D460" HideComponentName="True" HorizontalAlignment="Left" Canvas.Left="809" Canvas.Top="248" VerticalAlignment="Top"/>
+    <Labels:DetailsLabel ComponentName="464-VIEW" DetailsPageName="D460" HideComponentName="True" HorizontalAlignment="Left" Canvas.Left="810" Canvas.Top="247" VerticalAlignment="Center"/>
   </Canvas>
 </UserControl>
