--- a/Prevu.Synoptics.V3085_Anviplas/P474.xaml
+++ b/Prevu.Synoptics.V3085_Anviplas/P474.xaml
@@ -162,14 +162,14 @@
     <Labels:DeviceLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
             ComponentName="474-21-CV1" Canvas.Left="959" Canvas.Top="329"/>
-    <Labels:DeviceLabel HorizontalAlignment="Left" 
-            VerticalAlignment="Center" 
-            ComponentName="474-41-PT1" Canvas.Left="901" Canvas.Top="199"/>
+    <Labels:DeviceLabel HorizontalAlignment="Center" 
+            VerticalAlignment="Top" 
+            ComponentName="474-41-PT1" Canvas.Left="900" Canvas.Top="201"/>
     <Labels:DeviceLabel 
-            ComponentName="474-61-LEV" Canvas.Left="712" Canvas.Top="247" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+            ComponentName="474-61-LEV" Canvas.Left="714" Canvas.Top="247" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:JumpLabel 
             JumpFromLabel="492-01-MA1" 
             JumpToLabel="482-21-CV1" Canvas.Left="965" Canvas.Top="586" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-    <Labels:DetailsLabel ComponentName="470-VIEW" DetailsPageName="D470" HideComponentName="True" HorizontalAlignment="Center" Canvas.Left="807" Canvas.Top="247" VerticalAlignment="Top"/>
+    <Labels:DetailsLabel ComponentName="474-VIEW" DetailsPageName="D470" HideComponentName="True" HorizontalAlignment="Left" Canvas.Left="809" Canvas.Top="247" VerticalAlignment="Center"/>
   </Canvas>
 </UserControl>
